src/objects/Sprint__c.object
<CustomObject>
    <fields>
        <fullName>Closed_User_Stories__c</fullName>
        <inlineHelpText>Stories with status of: Deployed or Rejected.</inlineHelpText>
        <label>Closed User Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentSprint__c</fullName>
        <formula>AND( Start_Date__c  &lt;= TODAY(),
TODAY() &lt;=  End_Date__c)</formula>
        <label>Current Sprint?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Sprint_Story_Points__c</fullName>
        <inlineHelpText>The maximum number of Story Points for the sprint.  (Based on the team&apos;s established history.)</inlineHelpText>
        <label>Max Sprint Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_User_Stories__c</fullName>
        <inlineHelpText>Stories with Status other than: Deployed or Rejected.</inlineHelpText>
        <label>Open User Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Release Package to which the Spring belongs.</inlineHelpText>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Sprints</relationshipLabel>
        <relationshipName>Sprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint_Scope_Size__c</fullName>
        <formula>IF (( Total_Story_Points__c /  Max_Sprint_Story_Points__c ) &gt; 1, &quot;LARGE&quot;, IF (AND (( Total_Story_Points__c /  Max_Sprint_Story_Points__c ) &lt; 1, ( Total_Story_Points__c /  Max_Sprint_Story_Points__c ) &gt; 0), &quot;Medium&quot;, &quot;Small&quot;))</formula>
        <label>Sprint Scope Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Stories__c</fullName>
        <label>Total Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Story_Points__c</fullName>
        <inlineHelpText>The total number of story points from all User Stories in the Sprint.</inlineHelpText>
        <label>Total Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sprint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Stories__c</columns>
        <columns>Total_Story_Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>